Change npm ci to npm install in deploy workflow

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -33,7 +33,7 @@ jobs:
           cache: 'npm' # or 'pnpm' / 'yarn' if you use those
 
       - name: Install dependencies
-        run: npm ci # Use 'npm install' if you don't have a package-lock.json
+        run: npm install # Use 'npm install' if you don't have a package-lock.json
 
       - name: Build
         run: npm run build
