--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,7 +3,7 @@ name: Deploy to GitHub Pages
 on:
   # Trigger the workflow on push to the main branch
   push:
-    branches: ["main"]
+    branches: ["master"]
   # Allow running this workflow manually from the Actions tab
   workflow_dispatch:
 
@@ -30,7 +30,6 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 20
-          cache: 'npm' # or 'pnpm' / 'yarn' if you use those
 
       - name: Install dependencies
         run: npm install # Use 'npm install' if you don't have a package-lock.json
