--- a/package.json
+++ b/package.json
@@ -6,9 +6,7 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mdi/js": "^7.2.96",
-    "@mdi/react": "^1.6.1",
     "@mui/material": "^5.14.5",
-    "front-matter": "^4.0.2",
     "i18next": "^23.4.4",
     "i18next-browser-languagedetector": "^7.1.0",
     "qrcode.react": "^3.1.0",
@@ -19,8 +17,7 @@
     "react-i18next": "^13.1.2",
     "react-p5": "^1.3.35",
     "react-router-dom": "^6.15.0",
-    "unique-names-generator": "^4.7.1",
-    "web-vitals": "^2.1.4"
+    "unique-names-generator": "^4.7.1"
   },
   "scripts": {
     "dev": "vite",
@@ -32,8 +29,8 @@
     "@types/react": "^18.2.20",
     "@types/react-dom": "^18.2.7",
     "@types/react-helmet": "^6.1.6",
-    "@vitejs/plugin-react": "^4.0.4",
+    "@vitejs/plugin-react": "^4.7.0",
     "typescript": "^5.1.6",
-    "vite": "^4.4.9"
+    "vite": "^6.4.1"
   }
 }
